# FIIT_FZPH_Zadania

./: .gitignore  README.md
Template/: CMakeLists.txt  main.c  shapes.h
Test/: CMakeLists.txt  main  main.c
Zadanie_1/: CMakeLists.txt  collision_time.c  debug.c  main.c  test.c
Zadanie_10/: CMakeLists.txt  main.c  main_car.c  main_cat.c  shapes.h  utils.h  window.h
Zadanie_11/: CMakeLists.txt  ball.h  main.c  shapes.h  utils.h  window.h
Zadanie_2/: CMakeLists.txt  main.c
Zadanie_3/: CMakeLists.txt  Jednotka.c  Test.c  Test2.c  Test3.c  main.c
Zadanie_4/: CMakeLists.txt  file.h  main.c  utils.h  window.h
Zadanie_5/: CMakeLists.txt  main.c  shapes.h  utils.h
Zadanie_6/: CMakeLists.txt  data_19-03-2024_15-39-14-927.csv  main.c
Zadanie_7/: CMakeLists.txt  data_26-03-2024_17-11-02-232.csv  data_26-03-2024_17-13-47-625.csv  main.c  shapes.h  utils.h  window.h
Zadanie_8/: CMakeLists.txt  file.h  main.c  shapes.h  utils.h  window.h
Zadanie_9/: CMakeLists.txt  main.c  utils.h
